# kohvilogi

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  TEST_PLAN.md  pyproject.toml  requirements.txt
app/: auth.py  config.py  constants.py  database.py  error_handlers.py  logging_config.py  main.py  routes.py  schemas.py
demo/: index.html
screenshots/: .gitignore  README.md
scripts/: ci-test.sh  docker-test.sh
src/kohvilogi/: __main__.py  airtable_client.py  cli.py
templates/: index.html  stats.html  world.html
tests/: README.md  conftest.py  factories.py  test_app.py  test_e2e.py  test_integration.py  test_parse.py  test_security.py  test_unit.py
