[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kohvilogi"
version = "0.1.0"
description = "CLI expense tracker - log coffee (or anything) to Airtable"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
]

[project.scripts]
kohv = "kohvilogi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
